[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/buildings/refinery.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sprite_sheet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 61.0082

[node name="Refinery" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1040, 500, 128, 128 )

[node name="Powered" type="Label" parent="."]
margin_left = -28.0
margin_top = -46.0
margin_right = 27.0
margin_bottom = -15.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Powered
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refinery" type="Label" parent="."]
margin_left = -20.0
margin_top = 26.0
margin_right = 20.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Refinery"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CreateResourceTimer" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="." to="." method="_on_Refinery_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CreateResourceTimer" to="." method="_on_CreateResourceTimer_timeout"]
